Resfresh button works

--- a/src/azur/veho/view/TransferOverview.fxml
+++ b/src/azur/veho/view/TransferOverview.fxml
@@ -14,7 +14,7 @@
                   <ChoiceBox fx:id="chooseMachine" maxWidth="1.7976931348623157E308" prefHeight="26.0" prefWidth="800.0" />
                   <HBox minHeight="-Infinity" minWidth="-Infinity" spacing="10.0" HBox.hgrow="NEVER">
                      <children>
-                        <Button fx:id="refreshMachine" disable="true" layoutX="171.0" layoutY="35.0" mnemonicParsing="false" text="Refresh" />
+                        <Button fx:id="refreshMachine" layoutX="171.0" layoutY="35.0" mnemonicParsing="false" onAction="#handleRefreshMachine" text="Refresh" />
                         <Button fx:id="openFiles" disable="true" layoutX="257.0" layoutY="35.0" mnemonicParsing="false" onAction="#handleChooseFiles" text="Open..." />
                         <Button fx:id="sendFiles" disable="true" layoutX="331.0" layoutY="35.0" mnemonicParsing="false" onAction="#handleSendFiles" text="Send" />
                      </children>
