--- a/src/azur/veho/view/TransferOverview.fxml
+++ b/src/azur/veho/view/TransferOverview.fxml
@@ -21,7 +21,7 @@
                   </HBox>
                </children>
             </HBox>
-            <StackPane disable="true" layoutY="40.0" maxWidth="1.7976931348623157E308" visible="false">
+            <StackPane layoutY="40.0" maxWidth="1.7976931348623157E308">
                <children>
                   <ProgressBar layoutY="40.0" maxWidth="1.7976931348623157E308" prefHeight="20.0" prefWidth="701.0" progress="0.0" />
                   <Label fx:id="transferLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="205.0" layoutY="42.0" maxWidth="1.7976931348623157E308" opacity="0.5" prefHeight="16.0" prefWidth="150.0" text="file" />
