--- a/src/azur/veho/view/RootLayout.fxml
+++ b/src/azur/veho/view/RootLayout.fxml
@@ -7,7 +7,7 @@
 
 <BorderPane maxHeight="240.0" maxWidth="800.0" minHeight="100.0" minWidth="200.0" prefHeight="180.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <top>
-      <Label prefHeight="85.0" prefWidth="400.0" text="Veho allows you to share files between computers. Please check if everyone launched the software and are on the same network. Files are download in your home directory." wrapText="true" BorderPane.alignment="CENTER">
+      <Label prefHeight="85.0" prefWidth="400.0" text="Veho allows you to share files between computers. Please check if everyone launched the software and are on the same network. Files are download in your Desktop." wrapText="true" BorderPane.alignment="CENTER">
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
